--- a/wheel-root/wheel-d-sqlparser/sqlparser-business/pom.xml
+++ b/wheel-root/wheel-d-sqlparser/sqlparser-business/pom.xml
@@ -9,12 +9,6 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>sqlparser-sdk-dataset</artifactId>
-    <dependencies>
-        <dependency>
-            <groupId>org.wheel</groupId>
-            <artifactId>sqlparser-api</artifactId>
-            <version>${wheel-root.version}</version>
-        </dependency>
-    </dependencies>
+    <artifactId>sqlparser-business</artifactId>
+
 </project>
