--- a/wheel-root/wheel-d-sqlparser/sqlparser-sdk-cube/pom.xml
+++ b/wheel-root/wheel-d-sqlparser/sqlparser-sdk-cube/pom.xml
@@ -11,10 +11,12 @@
 
     <artifactId>sqlparser-sdk-cube</artifactId>
 
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.wheel</groupId>
+            <artifactId>sqlparser-sdk-dataset</artifactId>
+            <version>${wheel-root.version}</version>
+        </dependency>
+    </dependencies>
 
 </project>
