--- a/wheel-root/wheel-d-sqlparser/sqlparser-sdk-dataset/pom.xml
+++ b/wheel-root/wheel-d-sqlparser/sqlparser-sdk-dataset/pom.xml
@@ -9,14 +9,12 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-
     <artifactId>sqlparser-sdk-dataset</artifactId>
-    <packaging>jar</packaging>
     <dependencies>
         <dependency>
             <groupId>org.wheel</groupId>
             <artifactId>sqlparser-api</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${wheel-root.version}</version>
         </dependency>
     </dependencies>
 </project>
