--- a/wheel-root/wheel-d-sqlparser/sqlparser-api/pom.xml
+++ b/wheel-root/wheel-d-sqlparser/sqlparser-api/pom.xml
@@ -8,9 +8,7 @@
         <artifactId>wheel-d-sqlparser</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-
     <artifactId>sqlparser-api</artifactId>
-
     <dependencies>
         <dependency>
             <groupId>cn.stylefeng.roses</groupId>
@@ -21,15 +19,14 @@
 
         <dependency>
             <groupId>cn.stylefeng.roses</groupId>
-            <artifactId>config-api</artifactId>
+            <artifactId>validator-api</artifactId>
             <version>${roses.kernel.version}</version>
         </dependency>
 
-
         <dependency>
-            <groupId>cn.stylefeng.roses</groupId>
-            <artifactId>scanner-api</artifactId>
-            <version>${roses.kernel.version}</version>
+            <groupId>org.wheel</groupId>
+            <artifactId>datasource-api</artifactId>
+            <version>${wheel-root.version}</version>
         </dependency>
     </dependencies>
 
