--- a/wheel-root/wheel-d-sqlparser/sqlparser-sdk-dataset-view/pom.xml
+++ b/wheel-root/wheel-d-sqlparser/sqlparser-sdk-dataset-view/pom.xml
@@ -8,13 +8,11 @@
         <artifactId>wheel-d-sqlparser</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-
-    <artifactId>sqlparser-sdk-cube</artifactId>
-    
+    <artifactId>sqlparser-sdk-dataset-view</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.wheel</groupId>
-            <artifactId>sqlparser-sdk-dataset</artifactId>
+            <artifactId>sqlparser-api</artifactId>
             <version>${wheel-root.version}</version>
         </dependency>
     </dependencies>
