--- a/wheel-bi/wheel-bi-exp/pom.xml
+++ b/wheel-bi/wheel-bi-exp/pom.xml
@@ -10,6 +10,12 @@
     </parent>
 
     <artifactId>wheel-bi-exp</artifactId>
-
-
+    <version>${wheel-bi.version}</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.wheel.bi</groupId>
+            <artifactId>wheel-bi-api</artifactId>
+            <version>${wheel-bi.version}</version>
+        </dependency>
+    </dependencies>
 </project>
