--- a/wheel-bi/wheel-bi-ve/pom.xml
+++ b/wheel-bi/wheel-bi-ve/pom.xml
@@ -9,7 +9,13 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>wheel-bi-visual</artifactId>
-
-
+    <artifactId>wheel-bi-ve</artifactId>
+    <version>${wheel-bi.version}</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.wheel.bi</groupId>
+            <artifactId>wheel-bi-api</artifactId>
+            <version>${wheel-bi.version}</version>
+        </dependency>
+    </dependencies>
 </project>
