--- a/wheel-bi/wheel-bi-api/pom.xml
+++ b/wheel-bi/wheel-bi-api/pom.xml
@@ -10,11 +10,5 @@
     </parent>
 
     <artifactId>wheel-bi-api</artifactId>
-
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-
+    <version>${wheel-bi.version}</version>
 </project>
