--- a/wheel-bi/wheel-bi-app/src/main/resources/application-local.yml
+++ b/wheel-bi/wheel-bi-app/src/main/resources/application-local.yml
@@ -2,10 +2,17 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.1.100:23306/wheel?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&serverTimezone=CTT&nullCatalogMeansCurrent=true
+    url: jdbc:mysql://192.168.1.100:23306/wheel_v1?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&serverTimezone=CTT&nullCatalogMeansCurrent=true
     username: root
     password: 123456
 
     # 连接池大小根据实际情况调整
     max-active: 100
     max-pool-prepared-statement-per-connection-size: 100
+
+  redis:
+    database: 1
+    host: 192.169.1.100
+    port: 26379
+    password: 123456
+    timeout: 3000
