--- a/wheel-bi/wheel-bi-app/src/main/resources/application-prod.yml
+++ b/wheel-bi/wheel-bi-app/src/main/resources/application-prod.yml
@@ -9,3 +9,10 @@ spring:
     # 连接池大小根据实际情况调整
     max-active: 100
     max-pool-prepared-statement-per-connection-size: 100
+
+  redis:
+    database: 1
+    host: 192.169.1.100
+    port: 26379
+    password: 123456
+    timeout: 3000
