--- a/wheel-bi/wheel-bi-app/src/main/resources/application-dev.yml
+++ b/wheel-bi/wheel-bi-app/src/main/resources/application-dev.yml
@@ -2,26 +2,16 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/guns?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&serverTimezone=CTT&nullCatalogMeansCurrent=true
+    url: jdbc:mysql://192.168.1.100:23306/wheel?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&serverTimezone=CTT&nullCatalogMeansCurrent=true
     username: root
     password: 123456
 
     # 连接池大小根据实际情况调整
     max-active: 100
     max-pool-prepared-statement-per-connection-size: 100
-
+  # redis配置
   redis:
-    database: 1
-    host: 192.169.1.100
+    database: 0
+    host: 192.168.1.100
     port: 26379
-    password: 123456
     timeout: 3000
-
-devops:
-  serverHost: http://192.168.31.58:12909
-  project-unique-code: Y4JdNfsfS2tjAQouFm1t035IAnsjSKG3
-  project-interaction-secret-key: QBAttyH2ZkolwtkDcn0Y5b8HLGHEtOHC
-
-mybatis-plus:
-  configuration:
-    log-impl: org.apache.ibatis.logging.slf4j.Slf4jImpl
