--- a/wheel-root/wheel-d-client/wheel-client-auth-spring-boot-starter/pom.xml
+++ b/wheel-root/wheel-d-client/wheel-client-auth-spring-boot-starter/pom.xml
@@ -23,6 +23,12 @@
             <version>${roses.kernel.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>cn.stylefeng.roses</groupId>
+            <artifactId>security-sdk-cors</artifactId>
+            <version>${roses.kernel.version}</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
