--- a/wheel-root/wheel-d-client/wheel-client-config-spring-boot-starter/pom.xml
+++ b/wheel-root/wheel-d-client/wheel-client-config-spring-boot-starter/pom.xml
@@ -10,25 +10,42 @@
     </parent>
     <artifactId>wheel-client-config-spring-boot-starter</artifactId>
     <dependencies>
+        <!-- guns-roses 开发规则 -->
         <dependency>
             <groupId>cn.stylefeng.roses</groupId>
-            <artifactId>auth-api</artifactId>
+            <artifactId>cache-sdk-redis</artifactId>
             <version>${roses.kernel.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>cn.stylefeng.roses</groupId>
-            <artifactId>demo-api</artifactId>
+            <artifactId>auth-sdk</artifactId>
             <version>${roses.kernel.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
+            <groupId>cn.stylefeng.roses</groupId>
+            <artifactId>security-sdk-black-white</artifactId>
+            <version>${roses.kernel.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>cn.stylefeng.roses</groupId>
+            <artifactId>security-sdk-count</artifactId>
+            <version>${roses.kernel.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>cn.stylefeng.roses</groupId>
+            <artifactId>security-sdk-captcha</artifactId>
+            <version>${roses.kernel.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>cn.stylefeng.roses</groupId>
             <artifactId>wrapper-field-sdk</artifactId>
-            <version>8.1.1</version>
-            <scope>compile</scope>
+            <version>${roses.kernel.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
